<fix>: textarea blurry problem

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -256,7 +256,7 @@ body {
   max-width: 650px;
   padding: 10px;
   border-radius: 10px;
-  border: 2px solid dodgerblue;
+  border: 2px solid darkgray;
   display: flex;
   flex-direction: column;
   opacity: 0;
@@ -264,14 +264,13 @@ body {
   z-index: -1000;
   transition: all 0.3s ease;
   .note__options {
-    opacity: 0;
-    pointer-events: none;
     width: 100%;
     position: relative;
     bottom: 0;
+    opacity: 0;
+    pointer-events: none;
   }
-  input,
-  textarea {
+  input {
     border: none;
     outline: none;
     font-size: 18px;
@@ -279,28 +278,51 @@ body {
     margin-bottom: 3px;
     font-family: "Poppins", serif;
     font-weight: 500;
+    &::placeholder {
+      font-weight: 400;
+    }
   }
 
-  textarea {
+  #content {
+    appearance: textarea;
+    border: 1px solid gray;
+    font: medium -moz-fixed;
+    font: -webkit-small-control;
+    overflow: auto;
+
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 10px;
+    margin-bottom: 3px;
+    font-family: "Poppins", serif;
+    font-weight: 500;
     font-size: 16px;
     resize: none;
     font-weight: 400;
     height: 250px;
-    max-height: 450px;
+    max-height: 500px;
+
+    &:empty:before {
+      content: attr(data-text);
+      color: grey;
+    }
   }
 
   &.active {
-    z-index: 10000000;
+    z-index: 1000000000000;
     opacity: 1;
     pointer-events: all;
     textarea,
     input {
       opacity: 1;
+      pointer-events: all;
       z-index: 1000000000000;
     }
     .note__options {
       opacity: 1;
       pointer-events: all;
+      z-index: 1000000000000;
     }
   }
 }
